Menambah kategori berita, API, dan logo tab
